--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -100,11 +100,8 @@ jobs:
         run: snyk iac test --report
         continue-on-error: true
 
-      - name: Build Docker Image
-        run: docker build -t ${{ env.IMAGE_NAME }}:${{ env.CURRENT_DATE }} .
-
       - name: Run Snyk Container Monitor
-        run: snyk container monitor ${{ env.IMAGE_NAME }}:${{ env.CURRENT_DATE }} --file=Dockerfile
+        run: snyk container monitor ${{ env.IMAGE_NAME }}:latest
 
       - name: Upload SARIF Report to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
@@ -129,14 +126,14 @@ jobs:
         uses: docker/scout-action@v1
         with:
           command: quickview
-          image: "${{ env.IMAGE_NAME }}:${{ env.CURRENT_DATE }}"
+          image: "${{ env.IMAGE_NAME }}:latest"
 
       - name: Docker Scout CVEs
         id: docker-scout-cves
         uses: docker/scout-action@v1
         with:
           command: cves
-          image: "${{ env.IMAGE_NAME }}:${{ env.CURRENT_DATE }}"
+          image: "${{ env.IMAGE_NAME }}:latest"
 
       - name: Save Docker Scout Reports
         run: |
