--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -130,6 +130,13 @@ jobs:
           image: "${{ env.IMAGE_NAME }}:latest"
 
 
+      - name: Run Docker Scout Quickview and Save
+        run: tee docker-scout-quickview.md
+  
+      - name: Run Docker Scout CVEs and Save
+        run: tee docker-scout-cves.md
+
+
       - name: ls -al
         run: |
           ls -al
